<resources>
    <string name="app_name">Lab1UI</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nombres">Names</string>
    <string name="apellidos">Last Name</string>
    <string name="sexoMasculino">Male</string>
    <string name="sexoFemenino">Female</string>
    <string name="telefono">Phone</string>
    <string name="direccion">Address</string>
    <string name="email">Email</string>
    <string name="paises">Country</string>
    <string name="hobbies">Hobbies</string>
    <string name="favorito">Favorite</string>
    <string name="sexoLabel">Sex</string>
    <string name="nacimientoLabel">Birthday</string>

</resources>
